added roasted cocoa beans and recipes

--- a/src/main/resources/assets/chocomod/lang/en_us.json
+++ b/src/main/resources/assets/chocomod/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.chocomod.milk_chocolate_ingot": "Milk Chocolate Ingot",
   "item.chocomod.white_chocolate_ingot": "White Chocolate Ingot",
   "item.chocomod.dark_chocolate_ingot": "Dark Chocolate Ingot",
+  "item.chocomod.roasted_cocoa_beans": "Roasted Cocoa Beans",
 
   "creativetab.chocomod_tab": "Chocomod"
 }
