added the chocolate refiner base block

--- a/src/main/resources/assets/chocomod/lang/en_us.json
+++ b/src/main/resources/assets/chocomod/lang/en_us.json
@@ -4,5 +4,8 @@
   "item.chocomod.dark_chocolate_ingot": "Dark Chocolate Ingot",
   "item.chocomod.roasted_cocoa_beans": "Roasted Cocoa Beans",
 
+
+  "block.chocomod.chocolate_refiner": "Chocolate Refiner",
+
   "creativetab.chocomod_tab": "Chocomod"
 }
