added the cocoa butter bowl item and a test choco sword

--- a/src/main/resources/assets/chocomod/lang/en_us.json
+++ b/src/main/resources/assets/chocomod/lang/en_us.json
@@ -3,6 +3,9 @@
   "item.chocomod.white_chocolate_ingot": "White Chocolate Ingot",
   "item.chocomod.dark_chocolate_ingot": "Dark Chocolate Ingot",
   "item.chocomod.roasted_cocoa_beans": "Roasted Cocoa Beans",
+  "item.chocomod.cocoa_butter_bowl": "Cocoa Butter Bowl",
+
+  "item.chocomod.white_chocolate_sword": "White Chocolate Sword",
 
 
   "block.chocomod.chocolate_refiner": "Chocolate Refiner",
