added a placeholder chocolate refiner block texture and chocolate bars

--- a/src/main/resources/assets/chocomod/lang/en_us.json
+++ b/src/main/resources/assets/chocomod/lang/en_us.json
@@ -4,6 +4,9 @@
   "item.chocomod.dark_chocolate_ingot": "Dark Chocolate Ingot",
   "item.chocomod.roasted_cocoa_beans": "Roasted Cocoa Beans",
   "item.chocomod.cocoa_butter_bowl": "Cocoa Butter Bowl",
+  "item.chocomod.milk_chocolate_bar": "Milk Chocolate Bar",
+  "item.chocomod.white_chocolate_bar": "White Chocolate Bar",
+  "item.chocomod.dark_chocolate_bar": "Dark Chocolate Bar",
 
   "item.chocomod.white_chocolate_sword": "White Chocolate Sword",
 
