milk bowl added and fixing issues

--- a/src/main/resources/assets/chococraft/lang/en_us.json
+++ b/src/main/resources/assets/chococraft/lang/en_us.json
@@ -7,6 +7,7 @@
   "item.chococraft.milk_chocolate_bar": "Milk Chocolate Bar",
   "item.chococraft.white_chocolate_bar": "White Chocolate Bar",
   "item.chococraft.dark_chocolate_bar": "Dark Chocolate Bar",
+  "item.chococraft.milk_bowl": "Milk Bowl",
 
   "item.chococraft.white_chocolate_sword": "White Chocolate Sword",
 
