fruits for flavours added

--- a/src/main/resources/assets/chococraft/lang/en_us.json
+++ b/src/main/resources/assets/chococraft/lang/en_us.json
@@ -8,6 +8,12 @@
   "item.chococraft.white_chocolate_bar": "White Chocolate Bar",
   "item.chococraft.dark_chocolate_bar": "Dark Chocolate Bar",
   "item.chococraft.milk_bowl": "Milk Bowl",
+  "item.chococraft.strawberry": "Strawberry",
+  "item.chococraft.blueberry": "Blueberry",
+  "item.chococraft.raspberry": "Raspberry",
+  "item.chococraft.orange": "Orange",
+  "item.chococraft.almond": "Almond",
+  "item.chococraft.mint_leaf": "Mint Leaf",
 
   "item.chococraft.white_chocolate_sword": "White Chocolate Sword",
 
