orange tree generation wip and datagen started 2

--- a/src/main/resources/assets/chococraft/lang/en_us.json
+++ b/src/main/resources/assets/chococraft/lang/en_us.json
@@ -14,6 +14,12 @@
   "item.chococraft.orange": "Orange",
   "item.chococraft.almond": "Almond",
   "item.chococraft.mint_leaf": "Mint Leaf",
+  "item.chococraft.almond_milk_chocolate_bar": "Almond Milk Chocolate Bar",
+  "item.chococraft.raspberry_milk_chocolate_bar": "Raspberry Milk Chocolate Bar",
+  "item.chococraft.strawberry_white_chocolate_bar": "Strawberry White Chocolate Bar",
+  "item.chococraft.blueberry_white_chocolate_bar": "Blueberry White Chocolate Bar",
+  "item.chococraft.orange_dark_chocolate_bar": "Orange Dark Chocolate Bar",
+  "item.chococraft.mint_dark_chocolate_bar": "Mint Dark Chocolate Bar",
 
   "item.chococraft.white_chocolate_sword": "White Chocolate Sword",
 
